fix: upload-form clipping when lots of files get uploaded

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -98,6 +98,10 @@
   background-clip: text;
 }
 
+::-webkit-scrollbar{
+  @apply w-[2px]
+}
+
 * {
   scroll-behavior: smooth
 }
